--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -261,7 +261,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Provides status information (1 if phone is connected to a WiFi).</string> 
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;AU;Az;Ba;BC;BM;CA;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;AU;Az;Ba;BC;BM;CA;CI;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
 <string name="accessibility_titel">Please activate the accessibility service</string>
 <string name="accessibility_message">To ensure that the application is working correctly, we would like you to activate the accessibility service.</string>
 <string name="accessibility_goto">Settings</string>
