--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -123,6 +123,8 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="AS_e">Provides the estimated noise level, measured in dB.</string>
 <string name="AU_d">Call Audio</string>
 <string name="AU_e">Analysis of audio signal during call.</string>
+<string name="AV_d">Activity variance</string>
+<string name="AV_e">Calculates variance of user activity (see AC).</string>
 <string name="BT_d">Surrounding BT Devices</string>
 <string name="BT_e">Provides information about the BT devices around, such as MACs and BT names.</string>
 <string name="BN_d"># surrounding BT Devices</string>
@@ -261,7 +263,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Provides status information (1 if phone is connected to a WiFi).</string> 
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;AU;Az;Ba;BC;BM;CA;CI;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;AU;AV;Az;Ba;BC;BM;CA;CI;CR;CD;CL;CC;GI;GS;HU;PH;RO;PI;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
 <string name="accessibility_titel">Please activate the accessibility service</string>
 <string name="accessibility_message">To ensure that the application is working correctly, we would like you to activate the accessibility service.</string>
 <string name="accessibility_goto">Settings</string>
