--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -263,7 +263,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Provides status information (1 if phone is connected to a WiFi).</string> 
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;AU;AV;Az;Ba;BC;BM;CA;CI;CR;CD;CL;CC;GI;GS;HU;PH;Ro;Pi;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;AU;AV;Az;Ba;Bc;BM;CA;CI;CR;CD;CL;CC;GI;GS;HU;PH;Ro;Pi;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
 <string name="accessibility_titel">Please activate the accessibility service</string>
 <string name="accessibility_message">To ensure that the application is working correctly, we would like you to activate the accessibility service.</string>
 <string name="accessibility_goto">Settings</string>
@@ -276,10 +276,10 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStress_Timeline">myStress Timeline</string>
 <string name="notnow">In 15 min</string>
 <string name="skip">Skip this time</string>
-<string name="q_intro">Wie stark hatten Sie seit dem letzten Messpunkt das Gefühl, &#8230;</string>
+<string name="q_intro">Wie stark hattest Du seit dem letzten Messpunkt das Gefühl, &#8230;</string>
 <string name="q1">&#8230; die Kontrolle über wichtige Dinge zu verlieren?</string>
-<string name="q2">&#8230; sicher mit Ihren Aufgaben und Problemen umgehen zu können?</string>
-<string name="q3">&#8230; dass die Dinge nach Ihren Vorstellungen verlaufen?</string>
+<string name="q2">&#8230; sicher mit Deinen Aufgaben und Problemen umgehen zu können?</string>
+<string name="q3">&#8230; dass die Dinge nach Deinen Vorstellungen verlaufen?</string>
 <string name="q4">&#8230; die Fülle an Aufgaben/Problemen nicht mehr bewältigen zu können?</string>
 <string name="weak">weak</string>
 <string name="strong">strong</string>
