--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -275,16 +275,16 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="accessibility_spotify">&#8212;</string>
 <string name="localSensing">myStress Local Sensing</string>
 <string name="myStressUpload">myStress Upload</string>
-<string name="myStress_Map">myStress Mapp</string>
+<string name="myStress_Map">myStress Map</string>
 <string name="myStress_Timeline">myStress Timeline</string>
 <string name="notnow">In 15 Min.</string>
 <string name="skip">Diesmal nicht</string>
-<string name="q_intro">Wie stark hattest Du seit dem letzten Messpunkt das Gefühl, &#8230;</string>
+<string name="q_intro">Wie oft hattest Du seit dem letzten Messpunkt das Gefühl, &#8230;</string>
 <string name="q1">&#8230; die Kontrolle über wichtige Dinge zu verlieren?</string>
 <string name="q2">&#8230; sicher mit Deinen Aufgaben und Problemen umgehen zu können?</string>
 <string name="q3">&#8230; dass die Dinge nach Deinen Vorstellungen verlaufen?</string>
 <string name="q4">&#8230; die Fülle an Aufgaben/Problemen nicht mehr bewältigen zu können?</string>
-<string name="weak">schwach</string>
-<string name="strong">stark</string>
+<string name="weak">nie</string>
+<string name="strong">ständig</string>
 
 </resources>
