--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -266,7 +266,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="WC_e">Bestimmt ob das Handy momentan an WiFi angeschlossen ist (1, wenn ja, 0, wenn nicht).</string>
 
 <string name="debug_setting">false</string>
-<string name="activatedSensors">AC;AS;AF;AU;AV;Az;Ba;Bc;BM;CA;CI;CR;CD;CL;CC;GI;GS;HU;PH;Ro;Pi;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;WC;VI</string>
+<string name="activatedSensors">AC;AS;AF;AU;AV;Az;Ba;Bc;BM;CA;CI;CR;CD;CL;CC;GI;GS;HU;PH;Ro;Pi;LI;PR;PU;PD;SL;SM;TR;TV;NO;TI;Rm;Sc;SR;SS;TM;VI</string>
 <string name="accessibility_titel">Bitte aktiviere die Bedien- bzw. Eingabehilfe</string>
 <string name="accessibility_message">Damit die Applikation korrekt arbeiten kann, muss die Bedien- bzw. Eingabehilfe aktiviert werden</string>
 <string name="accessibility_goto">Einstellungen</string>
@@ -277,6 +277,12 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStressUpload">myStress Upload</string>
 <string name="myStress_Map">myStress Map</string>
 <string name="myStress_Timeline">myStress Timeline</string>
+<string name="polltime">360000</string>
+<string name="stresspolltime">3600000</string>
+<string name="time1">10</string>
+<string name="time2">14</string>
+<string name="time3">18</string>
+
 <string name="notnow">In 15 Min.</string>
 <string name="skip">Diesmal nicht</string>
 <string name="q_intro">Wie oft hattest Du seit dem letzten Messpunkt das Gefühl, &#8230;</string>
