--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -274,6 +274,12 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStressUpload">myStress Upload</string>
 <string name="myStress_Map">myStress Mapp</string>
 <string name="myStress_Timeline">myStress Timeline</string>
+<string name="polltime">360000</string>
+<string name="stresspolltime">3600000</string>
+<string name="time1">10</string>
+<string name="time2">14</string>
+<string name="time3">18</string>
+
 <string name="notnow">In 15 min</string>
 <string name="skip">Skip this time</string>
 <string name="q_intro">Wie oft hattest Du seit dem letzten Messpunkt das Gefühl, &#8230;</string>
