--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -282,12 +282,15 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 
 <string name="notnow">In 15 min</string>
 <string name="skip">Skip this time</string>
-<string name="q_intro">Wie oft hattest Du seit dem letzten Messpunkt das Gefühl, &#8230;</string>
-<string name="q1">&#8230; die Kontrolle über wichtige Dinge zu verlieren?</string>
-<string name="q2">&#8230; sicher mit Deinen Aufgaben und Problemen umgehen zu können?</string>
-<string name="q3">&#8230; dass die Dinge nach Deinen Vorstellungen verlaufen?</string>
-<string name="q4">&#8230; die Fülle an Aufgaben/Problemen nicht mehr bewältigen zu können?</string>
-<string name="weak">nie</string>
-<string name="strong">ständig</string>
+<string name="q_intro">Since the last measurement, how often have you felt, &#8230;</string>
+<string name="q1">&#8230; that you were unable to control the important things in your life?</string>
+<string name="q2">&#8230; confident about your ability to handle your personal problems?</string>
+<string name="q3">&#8230; that things were going your way?</string>
+<string name="q4">&#8230; difficulties were piling up so high that you could not overcome them?</string>
+<string name="l0">never</string>
+<string name="l1">almost never</string>
+<string name="l2">sometimes</string>
+<string name="l3">fairly often</string>
+<string name="l4">very often</string>
 
 </resources>
