--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -65,7 +65,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStress_Sensing">myStress Aufnahmen</string>
 <string name="running_since">&#8230;läuft seit&#8230;</string>
 <string name="restarted_since">&#8230;wiedergestarted seit&#8230;</string>
-<string name="killed_at">&#8230;beendet um</string>
+<string name="killed_at">&#8230;beendet bei </string>
 <string name="myStress_killed">myStress beendet</string>
 <string name="battery">Batterie</string>
 <string name="binding_failed">Anbinden an den Dienst erfolglos!</string>
@@ -277,6 +277,14 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStressUpload">myStress Upload</string>
 <string name="myStress_Map">myStress Map</string>
 <string name="myStress_Timeline">myStress Timeline</string>
+<string name="polltime">360000</string>
+<string name="stresspolltime">30000</string>
+<string name="stresssnoozetime">15000</string>
+<string name="time1">12</string>
+<string name="time2">13</string>
+<string name="time3">14</string>
+<string name="notification_visible">false</string>
+
 <string name="notnow">In 15 Min.</string>
 <string name="skip">Diesmal nicht</string>
 <string name="q_intro">Wie oft hattest Du seit dem letzten Messpunkt das Gefühl, &#8230;</string>
@@ -289,9 +297,4 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="l2">manchmal</string>
 <string name="l3">häufig</string>
 <string name="l4">sehr oft</string>
-<string name="polltime">360000</string>
-<string name="stresspolltime">30000</string>
-<string name="time1">13</string>
-<string name="time2">14</string>
-<string name="time3">15</string>
 </resources>
