--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -276,9 +276,11 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStress_Timeline">myStress Timeline</string>
 <string name="polltime">360000</string>
 <string name="stresspolltime">30000</string>
+<string name="stresssnoozetime">15000</string>
 <string name="time1">15</string>
 <string name="time2">16</string>
 <string name="time3">17</string>
+<string name="notification_visible">false</string>
 
 <string name="notnow">In 15 min</string>
 <string name="skip">Skip this time</string>
@@ -292,5 +294,4 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="l2">sometimes</string>
 <string name="l3">fairly often</string>
 <string name="l4">very often</string>
-
 </resources>
