--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -303,4 +303,8 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="question">Fragebogen</string>
 <string name="noData">Es werden derzeit keine Daten aufgezeichnet und können deshalb nicht angezeigt werden.</string>
 <string name="showNotification">Zeige Symbol in der Benachrichtigungsanzeige</string>
+<string name="showValues">Zeige aggregierte Daten seit:</string>
+<string name="on">An</string>
+<string name="off">Aus</string>
+<string name="mainMyStressStatus">Aufzeichnungsstatus von myStress</string>
 </resources>
