--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -118,7 +118,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="AC_e">Berechnet die Aktivität des Nutzers anhand der Bewegungen des Smartphones.</string>
 <string name="AF_d">Umgebungsfrequenz</string>
 <string name="AF_e">Bestimmt die geschätzte Audiofrequenz um die Tonhöhe in Hz zu bestimmen.</string>
-<string name="AS_d">Umgebungsgeräuschpegel</string>
+<string name="AS_d">Umgebungslautstärke</string>
 <string name="AS_e">Bestimmt den geschätzten Lärmpegel in dB.</string>
 <string name="AU_d">Audioanalyse</string>
 <string name="AU_e">Analyse des Audiosignals während eines Anrufs.</string>
@@ -132,31 +132,27 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="BD_e">Bestimmt die BT Geräte, die momentan an das Handy angeschlossen sind.</string>
 <string name="BP_d">Blutdruck</string>
 <string name="BP_e">Bestimmt Blutdruckwerte die durch den Benutzer mit Hilfe des Blutdruck Widgets eingegeben werden.</string>
-<string name="CA_d">Kalendareintrag</string>
-<string name="CA_e">Bestimmt den momentanen Kalendareintrag der ausgewählten Kalendarlisten.</string>
+<string name="CA_d">Kalendereintrag</string>
+<string name="CA_e">Bestimmt den momentanen Kalendereintrag der ausgewählten Kalenderlisten.</string>
 <string name="CR_d">Roaming</string>
 <string name="CR_e">Bestimmt den Roamingstatus (0 wenn nicht roaming, 1 wenn roaming).</string>
-<string name="CD_d">Mobildaten angeschlossen</string>
+<string name="CD_d">Mobildaten an</string>
 <string name="CD_e">Bestimmt den GPRS Status (0 wenn ausgeschaltet, 1 wenn eingeschaltet).</string>
-<string name="CS_d">Mobilsignalstärke in dBm</string>
+<string name="CS_d">Mobilsignalstärke</string>
 <string name="CS_e">Bestimmt die Stärke des Mobilfunksignals in dBm, wobei -113dBm kein Signal bedeutet.</string>
-<string name="CB_d">Mobilsignalstärke in bar</string>
+<string name="CB_d">Mobilsignalstärke</string>
 <string name="CB_e">Bestimmt die Stärke des Mobilfunksignals in Anzahl von Signalmarkierungen.</string>
-<string name="CI_d">Mobilfunkzellenidentifikation</string>
+<string name="CI_d">Mobilfunkzelle</string>
 <string name="CI_e">Bestimmt die Nummer der Mobilfunkzelle an die das Handy momentan angeschlossen ist - diese Nummer wird vom Mobilfunkbetreiber vergeben.</string>
-<string name="CL_d">Standort Area Code</string>
+<string name="CL_d">Location Area Code</string>
 <string name="CL_e">Bestimmt die Nummer des Standortcodes an den das Handy momentan angeschlossen ist - diese Nummer wird vom Mobilfunkbetreiber vergeben.</string>
-<string name="CC_d">Mobilfunk Landeskennung</string>
+<string name="CC_d">Landeskennung</string>
 <string name="CC_e">Bestimmt die Nummer des Landes in dem das Handy momentan angeschlossen ist - diese Nummer wird vom Mobilfunkbetreiber vergeben.</string>
-<string name="EB_d">Anmerkungsknopf Widget</string>
-<string name="EB_e">Bestimmt Anmerkungen die vom Benutzer mit Hilfes des Anmerkungswidget eingegeben werden.</string>
-<string name="ET_d">Anmerkungstext</string>
-<string name="ET_e">Bestimmt Text der mit myStress geteilt wird von Anwendungen die solches Teilen erlauben.</string>
 <string name="GO_d">GPS Breite</string>
 <string name="GO_e"></string>
 <string name="GL_d">GPS Länge</string>
 <string name="GL_e"></string>
-<string name="GA_d">GPS Höhr</string>
+<string name="GA_d">GPS Höhe</string>
 <string name="GA_e"></string>
 <string name="GI_d">GPS Info</string>
 <string name="GI_e">Bestimmt eine kombinierte Information von Long:Lat:Alt mit Hilfe von GPS.</string>
@@ -170,21 +166,17 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="HI_e">Bestimmt die momentane Geschwindigkeit mit Hilfe des Zephyr HxM Monitors.</string>
 <string name="HL_d">Batteriestand</string>
 <string name="HL_e">Bestimmt den Batteriestand des Zephyr HxM Monitors in %.</string>
-<string name="MW_d">Beobachtestes Medienverzeichnis</string>
-<string name="MW_e">Bestimmt Dateinamen von Media das im definierten Verzeichnis neu erstellt wird z.B. um Schnappschüsse zu erkennen.</string>
-<string name="MO_d">Stimmungsknopf Widget</string>
-<string name="MO_e">Bestimmt die Stimmung die vom Benutzer durch das Stimmungswidget eingegeben wird.</string>
-<string name="MP_d">Momentan spielen</string>
+<string name="MP_d">Gespielte Musik</string>
 <string name="MP_e">Bestimmt die momentan gespielte Musik als \'Artist:Album:Lied\'.</string>
-<string name="MA_d">Momentaner Künstler</string>
+<string name="MA_d">Künstler</string>
 <string name="MA_e">Bestimmt den Künstler der momentan gespielten Musik.</string>
-<string name="ML_d">Momentanes Album</string>
+<string name="ML_d">Album</string>
 <string name="ML_e">Bestimmt das Album der momentan gespielten Musik.</string>
-<string name="MT_d">Momentanes Lied</string>
+<string name="MT_d">Lied</string>
 <string name="MT_e">Bestimmt das Lied der momentan gespielten Musik.</string>
 <string name="NO_d">Benachrichtigung</string>
-<string name="NO_e">Bestimmt Informationen über Benachrichtigungen von Skype und Google Hangout.</string>
-<string name="PH_d">Anrufliste</string>
+<string name="NO_e">Bestimmt Informationen über Benachrichtigungen.</string>
+<string name="PH_d">Anruf</string>
 <string name="PH_e">Bestimmt Anrufe sowie deren Dauer.</string>
 <string name="TI_d">Textinformationen</string>
 <string name="TI_e">Bestimmt Anwendung, Länge, Sentiment und Tippgeschwindigkeit jeder eingetippten Nachricht.</string>
@@ -212,13 +204,13 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="BA_e">Bestimmt den Batteriestand des Handys in %.</string>
 <string name="BV_d">Batteriespannung</string>
 <string name="BV_e">Bestimmt die Batteriespannung des Handys in mV.</string>
-<string name="BC_d">Batterie laden</string>
-<string name="BC_e">Bestimmt ob die Handybatterie am laden ist (1) oder nicht (0)</string>
+<string name="BC_d">Ladestatus</string>
+<string name="BC_e">Bestimmt ob die Handybatterie lädt (1) oder nicht (0)</string>
 <string name="BM_d">Batterietemperatur</string>
 <string name="BM_e">Bestimmt die Temperatur der Handybatterie.</string>
-<string name="RM_d">Speicher verfügbar</string>
+<string name="RM_d">verfügbarer Speicher</string>
 <string name="RM_e">Bestimmt den momentan verfügbaren Speicher des Handys</string>
-<string name="SC_d">Bildschirm an/aus</string>
+<string name="SC_d">Bildschirm an</string>
 <string name="SC_e">Bestimmt den Status des Handybildschirms (0, falls ausgeschaltet und 1, falls eingeschaltet)</string>
 <string name="HS_d">Kopfhörer Status</string>
 <string name="HS_e">Bestimmt den Status des Kopfhörers mit 1, wenn eingesteckt und 0, wenn nicht.</string>
@@ -238,8 +230,6 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="TR_e">Bestimmt die momentan auf dem Handy laufenden Anwendungen.</string>
 <string name="TV_d">Sichtbare Programme</string>
 <string name="TV_e">Bestimmt die momentan auf dem Handy laufenden Anwendungen, die Benutzereingaben benötigen.</string>
-<string name="TE_d">Aufzeichnungsmuster</string>
-<string name="TE_e">Bestimmt das momentan verwendete myStress Aufzeichnungsmuster, wie z.B. Reisen.</string>
 <string name="TZ_d">Zeitzone</string>
 <string name="TZ_e">Bestimmt den momentane Zeitzonenoffset von UTC.</string>
 <string name="VT_d">Temperatur [C]</string>
@@ -252,7 +242,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="VC_e">Bestimmt die Wetterbedingungen, wie vom externen Webserver erhalten.</string>
 <string name="VW_d">Wind</string>
 <string name="VW_e">Bestimmt die Windbedingungen, wie vom externen Webserver erhalten.</string>
-<string name="VI_d">Kombinierte Wetterinfo</string>
+<string name="VI_d">Wetterinfo</string>
 <string name="VI_e">Bestimmt die kombinierten Bedingungen (Temperatur, Luftfeuchtigkeit, Wind und Wetterbedingungen), wie vom externen Webserver erhalten.</string>
 <string name="WF_d">WLAN Info</string>
 <string name="WF_e">Bestimmt die kombinierte Information über verfügbare WiFis.</string>
@@ -280,10 +270,9 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="polltime">30000</string>
 <string name="stresspolltime">30000</string>
 <string name="stresssnoozetime">15000</string>
-<string name="time1">14</string>
-<string name="time2">15</string>
-<string name="time3">16</string>
-<string name="notification_visible">true</string>
+<string name="time1">13</string>
+<string name="time2">14</string>
+<string name="time3">15</string>
 
 <string name="notnow">In 15 Min.</string>
 <string name="skip">Diesmal nicht</string>
