--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -305,5 +305,5 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="valueDescription6">Versendete E-Mails:</string>
 <string name="valueDescription7">Erhaltene Benachrichtigungen:</string>
 <string name="valueDescription8">Durchschnittliche Umgebungslautstärke:</string>
-
+<string name="refresh">Aktualisieren</string>
 </resources>
