--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -313,4 +313,6 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="valueDescription6">Sent E-Mails:</string>
 <string name="valueDescription7">Received notifications:</string>
 <string name="valueDescription8">Average amplient amplitude:</string>
+<string name="refresh">Refresh</string>
+
 </resources>
