--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -268,12 +268,12 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStressUpload">myStress Upload</string>
 <string name="myStress_Map">myStress Map</string>
 <string name="myStress_Timeline">myStress Timeline</string>
-<string name="polltime">30000</string>
-<string name="stresspolltime">30000</string>
-<string name="stresssnoozetime">15000</string>
-<string name="time1">13</string>
+<string name="polltime">300000</string>
+<string name="stresspolltime">3600000</string>
+<string name="stresssnoozetime">5000</string>
+<string name="time1">10</string>
 <string name="time2">14</string>
-<string name="time3">15</string>
+<string name="time3">18</string>
 
 <string name="notnow">In 15 Min.</string>
 <string name="skip">Diesmal nicht</string>
@@ -306,4 +306,6 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="valueDescription7">Erhaltene Benachrichtigungen:</string>
 <string name="valueDescription8">Durchschnittliche Umgebungslautstärke:</string>
 <string name="refresh">Aktualisieren</string>
+<string name="whatsNew">Änderungen</string>
+<string name="whatsNew2">Neu_Text</string>
 </resources>
