--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -275,12 +275,12 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="myStressUpload">myStress Upload</string>
 <string name="myStress_Map">myStress Mapp</string>
 <string name="myStress_Timeline">myStress Timeline</string>
-<string name="polltime">360000</string>
-<string name="stresspolltime">30000</string>
-<string name="stresssnoozetime">15000</string>
-<string name="time1">15</string>
-<string name="time2">16</string>
-<string name="time3">17</string>
+<string name="polltime">300000</string>
+<string name="stresspolltime">3600000</string>
+<string name="stresssnoozetime">5000</string>
+<string name="time1">10</string>
+<string name="time2">14</string>
+<string name="time3">18</string>
 
 <string name="notnow">In 15 min</string>
 <string name="skip">Skip this time</string>
@@ -314,5 +314,7 @@ along with this library; if not, write to the Free Software Foundation, Inc.,
 <string name="valueDescription7">Received notifications:</string>
 <string name="valueDescription8">Average amplient amplitude:</string>
 <string name="refresh">Refresh</string>
+<string name="whatsNew">Changelog</string>
+<string name="whatsNew2">New_Text</string>
 
 </resources>
